refactor(route): update public route definitions and add new character detail api
1. add new /api/character/data/:id endpoint to fetch single character detail
2. update indent style for route code consistency
3. update openapi spec: add uuid format for string ids, add ContentID/ContentUUID schemas, fix schema types for various endpoints
